...
    viewModel: CalendarViewModel,
    onClose: () -> Unit
) {
    Column(modifier = modifier) {
        IconButton(
            modifier = Modifier
                .testTag("CalendarTopBar_Btn_Close")
                .padding(top = 8.dp, start = 8.dp),
            onClick = onClose
        ) {
            Icon(
                painter = painterResource(R.drawable.ic_black_close),
                contentDescription = null,
...
    val hasNextMonth by viewModel.hasNextMonth.collectAsState()
    Row(
        modifier = modifier,
        verticalAlignment = Alignment.CenterVertically
    ) {
        CalendarArrowButton(
            modifier = Modifier.testTag("CalendarTopBar_Btn_Prev"),
            enabled = hasPreviousMonth,
            isLeft = true,
            onClick = viewModel::lastMonth
        )
        AnimatedContent(
            modifier = Modifier.weight(1f),
            targetState = dateStringPair,
            transitionSpec = { slideSpec(targetState.first > initialState.first) }
        ) { text ->
            Text(
                modifier = Modifier.testTag("CalendarTopBar_Text_Date"),
                text = text.second,
                textAlign = TextAlign.Center,
                fontSize = 18.sp,
                fontWeight = FontWeight.Medium,
                color = MaterialTheme.colors.secondaryVariant
            )
        }
        CalendarArrowButton(
            modifier = Modifier.testTag("CalendarTopBar_Btn_Next"),
            enabled = hasNextMonth,
            isLeft = false,
            onClick = viewModel::nextMonth
        )
    }
}
...
    Column(modifier = modifier) {
        DayAbbrTextRow(
            modifier = Modifier.fillMaxWidth()
        )
        CalendarTable(
            modifier = Modifier
                .testTag("CalendarContent_LVG_Games")
                .padding(top = 8.dp)
                .fillMaxWidth()
                .heightIn(max = LocalConfiguration.current.screenHeightDp.dp),
            viewModel = viewModel,
        )
        if (selectedGamesVisible) {
            CalendarGames(
                modifier = Modifier
                    .testTag("CalendarContent_CalendarGames")
                    .fillMaxWidth()
                    .heightIn(max = LocalConfiguration.current.screenHeightDp.dp),
                viewModel = viewModel,
                games = selectedGames
            )
        }
...
            .rippleClickable {
                onClick(dateData.date)
            }
    ) {
        Text(
            modifier = Modifier
                .testTag("CalendarContent_Text_Date")
                .align(Alignment.TopEnd)
                .padding(4.dp),
            text = dateData.day.toString(),
            color = if (isSelected && dateData.isCurrentMonth) {
                MaterialTheme.colors.secondary
            } else {
...
